fix: multiselect dropdown z-index in modals, show all departments in schedule config

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -458,6 +458,16 @@ tr.fields {
   padding-left: 40px;
 }
 
+// Fix multiselect dropdown inside modals - allow it to overflow modal-body
+.modal .modal-body {
+  overflow: visible;
+}
+
+.modal .multiselect-container {
+  position: absolute;
+  z-index: 1060;
+}
+
 .checklist-success {
   color: #5cb85c !important;
 }
